fix alignment of search input

--- a/css/site.styl
+++ b/css/site.styl
@@ -227,6 +227,7 @@ img
   border-bottom: 1px dotted $color-black-soft
   outline: none
   max-width: 90px
+  margin-top: -2px
 
 #tags
   li
